<resources>
    <string name="app_name">Registro de Productos</string>
    <string name="title_display_contact_activity">Productos</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="titulo1">Agregar Producto</string>
    <string name="inventario">No. Inv.</string>
    <string name="marca">Marca</string>
    <string name="nombre">Nombre</string>
    <string name="tipo">Tipo</string>
    <string name="empresa">Empresa</string>
    <string name="guardae">Guardar</string>

    <string name="tituloPincipal">Lista de Productos</string>

    <string name="agregarNuevo">Agregar Nuevo</string>
    <string name="editarProducto">Editar Producto</string>
    <string name="eliminarProducto">Eliminar Producto</string>

    <string name="dialogEliminarProducto">DeseaEliminar el producto?</string>
    <string name="dialogPositive">SI</string>
    <string name="dialogNegative">NO</string>
</resources>
